bgi fix tryout with overflow: scroll

--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 23px;
@@ -32,6 +38,8 @@ body {
   border: 1px solid white;
   min-height: calc(100vh - 40px);
   background-color: #fdfdfd;
+  position: static;
+  overflow: scroll;
 }
 
 /* header styles */
